examples/test/testpolicy5922.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5922
  namespace: namespace338
spec:
  podSelector:
    matchLabels:
      key37: value4
      key36: value15
      key3: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value34
          key11: value27
          key10: value48
      podSelector:
        matchLabels:
          key0: value49
          key33: value31
          key15: value20
